--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,6 +31,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install pnpm
+        run: |
+          npm install -g pnpm@latest-10
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -42,7 +45,6 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install dependencies
         run: |
-          npm install -g pnpm@latest-10
           pnpm install
         working-directory: ${{ env.BUILD_PATH }}
       - name: Build with Vite
